# pdm-app-deployment-practice

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  image-build-push.yml
deploy/: deploy.sh  run-service-production.yaml  run-service-staging.yaml  skaffold.yaml
src/pdm_app_deployment_practice/: main.py
terraform/artifact-registry/: .terraform.lock.hcl  import.tf  main.tf  providers.tf  service-apis.tf  variables.tf
